sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value int
	int c = 0;
        ^AlgBubbleSort1:5: error: not found: value c
	while (c == 0 )
               ^AlgBubbleSort1:7: error: not found: value c
		c = 1;
                ^AlgBubbleSort1:13: error: not found: value c
				c = 0
                                ^